[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/managers/Boss_Arena_Manager.gd" type="Script" id=1]

[node name="Boss_Arena" type="Area2D"]
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Boss_container" type="Node2D" parent="."]

[node name="Cutscene_Cam" type="Camera2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Boss_Arena_body_entered"]
